# human_vision-human_face_cutter

./: CMakeLists.txt  package.xml
include/: FaceCuttingFunctions.hpp  MainData.hpp  RosServiceFunctions.hpp  RosServices.hpp
main_src/: main.cpp
mocks/: cutFaceMock.cpp
src/: FaceCuttingFunctions.cpp  MainData.cpp  RosService.cpp  RosServiceFunctions.cpp  SystemFunctions.cpp
